build/log/idf_py_stdout_output_18103
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/dj/esp_home_automation/my_home_automation/build/bootloader/esp-idf/esptool_py && /home/dj/.espressif/python_env/idf5.5_py3.9_env/bin/python /home/dj/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/dj/esp_home_automation/my_home_automation/build/bootloader/bootloader.bin
Bootloader binary size 0x6600 bytes. 0xa00 bytes (9%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/dj/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5-dev-1050-gb5ac4fbdf9-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -Iconfig -I../main -I/home/dj/esp-idf/components/newlib/platform_include -I/home/dj/esp-idf/components/freertos/config/include -I/home/dj/esp-idf/components/freertos/config/include/freertos -I/home/dj/esp-idf/components/freertos/config/xtensa/include -I/home/dj/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/dj/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/dj/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/dj/esp-idf/components/freertos/esp_additions/include -I/home/dj/esp-idf/components/esp_hw_support/include -I/home/dj/esp-idf/components/esp_hw_support/include/soc -I/home/dj/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/dj/esp-idf/components/esp_hw_support/dma/include -I/home/dj/esp-idf/components/esp_hw_support/ldo/include -I/home/dj/esp-idf/components/esp_hw_support/debug_probe/include -I/home/dj/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/dj/esp-idf/components/esp_hw_support/port/esp32/. -I/home/dj/esp-idf/components/esp_hw_support/port/esp32/include -I/home/dj/esp-idf/components/heap/include -I/home/dj/esp-idf/components/heap/tlsf -I/home/dj/esp-idf/components/log/include -I/home/dj/esp-idf/components/soc/include -I/home/dj/esp-idf/components/soc/esp32 -I/home/dj/esp-idf/components/soc/esp32/include -I/home/dj/esp-idf/components/soc/esp32/register -I/home/dj/esp-idf/components/hal/platform_port/include -I/home/dj/esp-idf/components/hal/esp32/include -I/home/dj/esp-idf/components/hal/include -I/home/dj/esp-idf/components/esp_rom/include -I/home/dj/esp-idf/components/esp_rom/esp32/include -I/home/dj/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/dj/esp-idf/components/esp_rom/esp32 -I/home/dj/esp-idf/components/esp_common/include -I/home/dj/esp-idf/components/esp_system/include -I/home/dj/esp-idf/components/esp_system/port/soc -I/home/dj/esp-idf/components/esp_system/port/include/private -I/home/dj/esp-idf/components/xtensa/esp32/include -I/home/dj/esp-idf/components/xtensa/include -I/home/dj/esp-idf/components/xtensa/deprecated_include -I/home/dj/esp-idf/components/lwip/include -I/home/dj/esp-idf/components/lwip/include/apps -I/home/dj/esp-idf/components/lwip/include/apps/sntp -I/home/dj/esp-idf/components/lwip/lwip/src/include -I/home/dj/esp-idf/components/lwip/port/include -I/home/dj/esp-idf/components/lwip/port/freertos/include -I/home/dj/esp-idf/components/lwip/port/esp32xx/include -I/home/dj/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/dj/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/dj/esp-idf/components/esp_http_server/include -I/home/dj/esp-idf/components/http_parser -I/home/dj/esp-idf/components/esp_event/include -I/home/dj/esp-idf/components/esp_wifi/include -I/home/dj/esp-idf/components/esp_wifi/include/local -I/home/dj/esp-idf/components/esp_wifi/wifi_apps/include -I/home/dj/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/dj/esp-idf/components/esp_phy/include -I/home/dj/esp-idf/components/esp_phy/esp32/include -I/home/dj/esp-idf/components/esp_netif/include -I/home/dj/esp-idf/components/driver/deprecated -I/home/dj/esp-idf/components/driver/i2c/include -I/home/dj/esp-idf/components/driver/touch_sensor/include -I/home/dj/esp-idf/components/driver/twai/include -I/home/dj/esp-idf/components/driver/touch_sensor/esp32/include -I/home/dj/esp-idf/components/esp_pm/include -I/home/dj/esp-idf/components/esp_ringbuf/include -I/home/dj/esp-idf/components/esp_driver_gpio/include -I/home/dj/esp-idf/components/esp_driver_pcnt/include -I/home/dj/esp-idf/components/esp_driver_gptimer/include -I/home/dj/esp-idf/components/esp_driver_spi/include -I/home/dj/esp-idf/components/esp_driver_mcpwm/include -I/home/dj/esp-idf/components/esp_driver_ana_cmpr/include -I/home/dj/esp-idf/components/esp_driver_i2s/include -I/home/dj/esp-idf/components/esp_driver_sdmmc/include -I/home/dj/esp-idf/components/sdmmc/include -I/home/dj/esp-idf/components/esp_driver_sdspi/include -I/home/dj/esp-idf/components/esp_driver_sdio/include -I/home/dj/esp-idf/components/esp_driver_dac/include -I/home/dj/esp-idf/components/esp_driver_rmt/include -I/home/dj/esp-idf/components/esp_driver_tsens/include -I/home/dj/esp-idf/components/esp_driver_sdm/include -I/home/dj/esp-idf/components/esp_driver_i2c/include -I/home/dj/esp-idf/components/esp_driver_uart/include -I/home/dj/esp-idf/components/vfs/include -I/home/dj/esp-idf/components/esp_driver_ledc/include -I/home/dj/esp-idf/components/esp_driver_parlio/include -I/home/dj/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/dj/esp-idf/components/nvs_flash/include -I/home/dj/esp-idf/components/esp_partition/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy   -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/dj/esp_home_automation/my_home_automation=. -fmacro-prefix-map=/home/dj/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj   -c ../main/main.c
../main/main.c: In function 'app_main':
../main/main.c:426:5: error: implicit declaration of function 'start_http_server' [-Wimplicit-function-declaration]
  426 |     start_http_server();
      |     ^~~~~~~~~~~~~~~~~
../main/main.c: At top level:
../main/main.c:259:18: warning: 'status_handler' defined but not used [-Wunused-function]
  259 | static esp_err_t status_handler(httpd_req_t *req) {
      |                  ^~~~~~~~~~~~~~
../main/main.c:230:18: warning: 'relay_control_handler' defined but not used [-Wunused-function]
  230 | static esp_err_t relay_control_handler(httpd_req_t *req) {
      |                  ^~~~~~~~~~~~~~~~~~~~~
../main/main.c:40:23: warning: 'server' defined but not used [-Wunused-variable]
   40 | static httpd_handle_t server = NULL;  // Added missing server declaration
      |                       ^~~~~~
ninja: build stopped: subcommand failed.
